<resources>
    <string name="app_name">DouBan</string>
    <string name="search_movie">请输入要搜索的电影</string>
    <string name="movie">电影</string>
    <string name="book">图书</string>
    <string name="navigation_drawer_open">菜单打开</string>
    <string name="navigation_drawer_close">菜单关闭</string>
    <string name="cinema_score">评分:</string>
    <string name="love_count">%d 人喜欢</string>
    <string name="comment_count">%d 条评论</string>
    <string name="score">评分：%.1f</string>
    <string name="directors">导演：%s</string>
    <string name="casts">影人</string>
    <string name="genres">类型：%s</string>
    <string name="summary">简介</string>
    <string name="input_book_tips">请输入搜索的图书</string>
    <string name="check">查询</string>
    <string name="book_price">￥%.2f</string>
    <string name="search_error">没有相关结果，请输入合法的关键词~</string>
    <string name="author">作者简介</string>
    <string name="category">分类</string>
</resources>
