<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/mIvBgPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/mTvMovieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/mTvCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTvMovieName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvLove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/love_count"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/mTvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/mTvLove"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/mTvLove"
                android:text="@string/comment_count"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <ImageView
                android:id="@+id/mIvPoster"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/score"
                android:textColor="@color/grey_666"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvDirectors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/directors"
                android:textColor="@color/grey_666"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvCasts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/casts"
                android:textColor="@color/grey_666"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/genres"
                android:textColor="@color/grey_666"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey_666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/grey_666"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey_777"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey_666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casts" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mCastsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>