<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <include layout="@layout/layout_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/mIvBookBigPoster"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/mTvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mIvBookBigPoster"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/mTvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTvName"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mTvSummaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTvAuthor"
                android:layout_marginTop="20dp"
                android:text="@string/summary"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/mTvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTvSummaryTitle"
                android:layout_marginTop="10dp"
                android:textSize="12dp"/>

            <View
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_666"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/mTvSummary"/>

            <TextView
                android:id="@+id/mTvAuthorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/border"
                android:layout_marginTop="10dp"
                android:text="@string/author"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/mTvAuthorIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTvAuthorTitle"
                android:layout_marginTop="10dp"
                android:textSize="12dp"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
